--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -6,6 +6,8 @@
   <head>
     <title>Teacher view</title>
     <link rel="stylesheet" href="{% static 'css/teacherView.css' %}">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="header">
@@ -34,8 +36,9 @@
           <div id="controls">
             <button class="btn" id="addGroup">New Group</button>
             <button class="btn" id="autoGroup">Create Groups Automatically</button>
-            <button class="btn" id="groupSettings">Group Settings</button>
+            <button class="btn" id="groupSettings" data-toggle="modal" data-target="#group_settings" >Group Settings</button>
           </div>
+
 
           <h2 id="groupTitle">Groups</h2>
 
@@ -57,5 +60,7 @@
         </div>
       </div>
     </div>
+  {%include "./settingsView.html" %}
+  <script src="{% static 'js/settingsView.js' %}"></script>
   </body>
 </html>
