Add field for tags

--- a/project/templates/pages/settingsView.html
+++ b/project/templates/pages/settingsView.html
@@ -18,6 +18,8 @@
                 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
                 <div class="container-fluid mt-5">
                     <input type="number" id="qty_input" class="form-control" value="1" min="1">
+
+                    <h4>Tägit myöhemmin tähän</h4>
                 </div>
                <div class="modal-footer">
                    <button class="btn" data-dismiss="modal">Cancel</button>
