--- a/project/templates/pages/modals/autoGroupModal.html
+++ b/project/templates/pages/modals/autoGroupModal.html
@@ -8,8 +8,9 @@
       <div class="modal-body">
         <h4>Sorting method:</h4>
         <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+          >
             <span id="chosenItem">Random</span>
             <span class="caret"></span>
           </button>
@@ -21,8 +22,7 @@
         </div>
         <br />
         <h4>Group size:</h4>
-        min: <input id="minSize" name="autoGroupMinSize" type="number" value="1" min="1" oninput="updateMaxSize()" />
-        max: <input id="maxSize" name="autoGroupMaxSize" type="number" value="1" min="1" oninput="updateMinSize()" />
+        <input id="autoGroupSize" name="autoGroupSize" type="number" value="1" min="1"/>
       </div>
 
       <div class="modal-footer">
