--- a/project/templates/pages/modals/settingsView.html
+++ b/project/templates/pages/modals/settingsView.html
@@ -6,7 +6,8 @@
       </div>
       <div class="modal-body">
         <h4>Group size </h4>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
+          integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
           crossorigin="anonymous">
         <div class="container-fluid mt-5">
           <input type="number" id="qtyInput" class="form-control" value="1" min="1">
