--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -8,8 +8,11 @@
     <title>Teacher view</title>
     <link rel="stylesheet" href="{% static 'css/teacherView.css' %}">
     <!-- Get jQuery and bootstrap.js from CDN -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
