--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -9,6 +9,7 @@
     <title>Teacher view</title>
     <link rel="stylesheet" href="{% static 'css/teacherView.css' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicons/favicon.ico' %}"/>
+    <link rel="stylesheet" href="{% static 'css/newGroupView.css' %}">
     <!-- Get jQuery and bootstrap.js from CDN -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -49,7 +50,7 @@
           <h2 id="courseName">Course 1</h2>
 
           <div id="controls">
-            <button class="btn" id="addGroupBtn">
+            <button class="btn" id="addGroupBtn" data-toggle="modal" data-target="#newGroup">
               New Group
             </button>
             <button class="btn" id="autoGroupBtn" data-toggle="modal" data-target="#autoModal">
@@ -111,9 +112,12 @@
 
     {% include "./modals/autoGroupModal.html" %}
     {% include "./modals/settingsView.html" %}
+    {% include "./modals/newGroupView.html" %}
+
     <!-- Script for automatic grouping modal -->
     <script src="{% static 'js/autoGroupModal.js' %}"></script>
 
+    <script src="{% static 'js/newGroupView.js' %}"></script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
     <script src="{% static 'js/editGroupModal.js'%}"></script>
   </body>
