--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -2,6 +2,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 
+
 <html lang="en">
 
   <head>
@@ -14,6 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/editGroup.css' %}">
   </head>
 
   <body>
@@ -94,6 +96,7 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous">
     </script>
+    <script src="http://malsup.github.com/jquery.form.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="{% static 'js/editGroupModal.js'%}"></script>
   </body>
