--- a/project/templates/pages/modals/editGroupDialog.html
+++ b/project/templates/pages/modals/editGroupDialog.html
@@ -4,7 +4,7 @@
 <form id="editGroupForm" class="form" role="form" action="{% url 'edit_group' group.course_code %}" method="post">
   <div class="modal-header">
     <button type="button" class="close" name="button" data-dismiss="modal" aria-hidden="true">x</button>
-    <h4 class="modal-title" id="editGroupTitle" style="text-align:center">Edit group {{ group.name }}</h4>
+    <h4 class="modal-title" id="editGroupTitle">Edit group {{ group.name }}</h4>
   </div>
   <div class="modal-body">
     {% csrf_token %}
@@ -12,7 +12,7 @@
       <div id="leftSide" class="col-sm-5">
         <div class="form-group">
           <h5>Students without a group</h5>
-          <div id="noGroupStudentList" style="border:solid;border-width:thin; border-color:gray">
+          <div id="noGroupStudentList" class="listStyle">
             <div id="1" ondblclick="moveDbl(1,1)" onclick="paintDiv(event,1)">1</div>
             <div id="2" ondblclick="moveDbl(2,2)" onclick="paintDiv(event,2)">2</div>
             <div id="3" ondblclick="moveDbl(3,3)" onclick="paintDiv(event,3)">3</div>
@@ -30,7 +30,7 @@
       <div id="rightSide" class="col-sm-5">
         <div class="form-group">
           <h5>Selected students</h5>
-          <div id="studentList" style="border:solid;border-width:thin; border-color:gray">
+          <div id="studentList" class="listStyle">
             {% for student in group.students %}
             <div id="{{student}}" class="studentItem" ondblclick="moveDbl({{student}}, {{student}})" value="{{ student }}" onclick="paintDiv(event, {{student}})">
               {{ student }}
@@ -40,9 +40,21 @@
         </div>
       </div>
     </div>
-  </div>
+    {{ form.non_field_errors }}
+    <div class="form-group" id="formStudents" style="display:none">
+      {{form.students}}"
+    </div>
   <div class="modal-footer">
     <input type="button" class="btn btn-default" name="cancel" value="cancel" data-dismiss="modal">
     <input type="submit" class="btn btn-primary" name="submit" value="save">
   </div>
+  <script>
+    var form_options = {
+        target: '#editGroupModal',
+        success: function() {
+          console.log('Success!');
+         }
+    }
+    $('#editGroupForm').ajaxForm(form_options);
+  </script>
 </form>
