--- a/project/templates/pages/modals/editGroupDialog.html
+++ b/project/templates/pages/modals/editGroupDialog.html
@@ -1,6 +1,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 
+<!--Uses ajax to send data from dialog with form to the django model-->
 <form id="editGroupForm" class="form" role="form" action="{% url 'edit_group' group.course_code %}" method="post">
   <div class="modal-header">
     <button type="button" class="close" name="button" data-dismiss="modal" aria-hidden="true">x</button>
@@ -13,9 +14,9 @@
         <div class="form-group">
           <h5>Students without a group</h5>
           <div id="noGroupStudentList" class="listStyle">
-            <div id="1" ondblclick="moveDbl(1,1)" onclick="paintDiv(event,1)">1</div>
-            <div id="2" ondblclick="moveDbl(2,2)" onclick="paintDiv(event,2)">2</div>
-            <div id="3" ondblclick="moveDbl(3,3)" onclick="paintDiv(event,3)">3</div>
+            <div id="1" ondblclick="moveStudentDoubleClick(1,1)" onclick="paintDiv(event,1)">1</div>
+            <div id="2" ondblclick="moveStudentDoubleClick(2,2)" onclick="paintDiv(event,2)">2</div>
+            <div id="3" ondblclick="moveStudentDoubleClick(3,3)" onclick="paintDiv(event,3)">3</div>
           </div>
         </div>
       </div>
@@ -32,7 +33,7 @@
           <h5>Selected students</h5>
           <div id="studentList" class="listStyle">
             {% for student in group.students %}
-            <div id="{{student}}" class="studentItem" ondblclick="moveDbl({{student}}, {{student}})" value="{{ student }}" onclick="paintDiv(event, {{student}})">
+            <div id="{{student}}" class="studentItem" ondblclick="moveStudentDoubleClick({{student}}, {{student}})" value="{{ student }}" onclick="paintDiv(event, {{student}})">
               {{ student }}
             </div>
             {% endfor %}
@@ -41,6 +42,7 @@
       </div>
     </div>
     {{ form.non_field_errors }}
+    <!--hidden input field for student list. Form sends data from this input.-->
     <div class="form-group" id="formStudents" style="display:none">
       {{form.students}}"
     </div>
@@ -51,9 +53,7 @@
   <script>
     var form_options = {
         target: '#editGroupModal',
-        success: function() {
-          console.log('Success!');
-         }
+        success: function() {}
     }
     $('#editGroupForm').ajaxForm(form_options);
   </script>
