--- a/project/templates/pages/modals/editGroupDialogSuccess.html
+++ b/project/templates/pages/modals/editGroupDialogSuccess.html
@@ -7,6 +7,7 @@
               <div class="modal-body">
                   <p>Changes to group {{ group.course_code }} saved!</p>
                   <script>
+                    //Closes modal and clears the modal data
                     setTimeout(function() { jQuery('#editGroupModal').modal('hide'); }, 1000);
                     $('body').on('hidden.bs.modal', '.modal', function () {
                         $(this).removeData('bs.modal');
