--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -75,7 +75,7 @@
               <td>{{group.name}}</td>
               <td>{{group.students}}</td>
               <td>{{group.type}}</td>
-              <td><button id="editGroupBtn" class="btn" data-toggle="modal" data-target="#editGroupModal" href="{% url 'edit_group' group.course_code %}" onclick="clearModal()">Edit</button></td>
+              <td><button id="editGroupBtn" class="btn" data-toggle="modal" data-target="#editGroupModal" href="{% url 'edit_group' group.course_code %}">Edit</button></td>
             </tr>
             {% endfor %}
           </table>
