Fix closing the modal and clearing data from the form.

--- a/project/templates/pages/modals/editGroupDialogSuccess.html
+++ b/project/templates/pages/modals/editGroupDialogSuccess.html
@@ -5,7 +5,7 @@
                 <h4 class="modal-title" id="myModalLabel">Success</h4>
               </div>
               <div class="modal-body">
-                  <p>Changes to group {{ group.course_code }} saved!</p>
+                  <p>Changes to group {{ group.group_id }} saved!</p>
                   <script>
                     //Closes modal and clears the modal data
                     setTimeout(function() { jQuery('#editGroupModal').modal('hide'); }, 1000);
