--- a/project/templates/pages/modals/editGroupDialog.html
+++ b/project/templates/pages/modals/editGroupDialog.html
@@ -4,8 +4,8 @@
 <!--Uses ajax to send data from dialog with form to the django model-->
 <form id="editGroupForm" class="form" role="form" action="{% url 'edit_group' group.id %}" method="post">
   <div class="modal-header">
-    <button type="button" class="close" name="button" data-dismiss="modal" aria-hidden="true">x</button>
-    <h4 class="modal-title" id="editGroupTitle">Edit group {{ group.course_code }}</h4>
+    <button type="button" id="x" class="close" name="button" data-dismiss="modal" aria-hidden="true">x</button>
+    <h4 class="modal-title" id="editGroupTitle">Edit group {{ group.group_id }}</h4>
   </div>
   <div class="modal-body" onload="script();">
     {% csrf_token %}
@@ -47,7 +47,7 @@
       {{form.students}}
     </div>
   <div class="modal-footer">
-    <input type="button" class="btn btn-default" name="cancel" value="cancel" data-dismiss="modal">
+    <input type="button" class="btn btn-default" id="cancel" name="cancel" value="cancel" data-dismiss="modal">
     <input type="submit" class="btn btn-primary" name="submit" value="save">
   </div>
   <script>
@@ -56,5 +56,19 @@
         success: function() {}
     }
     $('#editGroupForm').ajaxForm(form_options);
+
+    $(document).ready(function() {
+      $('#x').click(closeModal);
+      $('#cancel').click(closeModal);
+    });
+
+    function closeModal() {
+      setTimeout(function() { jQuery('#editGroupModal').modal('hide'); }, 1000);
+      $('body').on('hidden.bs.modal', '.modal', function () {
+          $(this).removeData('bs.modal');
+          window.location.reload(true);
+          console.log('Close success!');
+      });
+    }
   </script>
 </form>
