Fix let/const errors.

--- a/project/templates/pages/modals/editGroupDialog.html
+++ b/project/templates/pages/modals/editGroupDialog.html
@@ -61,7 +61,7 @@
     <input type="submit" class="btn btn-primary" name="submit" value="save">
   </div>
   <script>
-    let form_options = {
+    var form_options = {
         target: '#editGroupModal',
         success: function() {}
     }
