Settings modal window

--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -50,7 +50,7 @@
           <h2 id="courseName">Course 1</h2>
 
           <div id="controls">
-            <button class="btn" id="addGroupBtn" data-toggle="modal" data-target="#newGroup">
+            <button class="btn" id="addGroupBtn" data-toggle="modal" data-target="#newGroup" href="{% url 'new_group'%}">
               New Group
             </button>
             <button class="btn" id="autoGroupBtn" data-toggle="modal" data-target="#autoModal">
