Add some automatic tests for teacher view

--- a/project/templates/pages/modals/autoGroupModal.html
+++ b/project/templates/pages/modals/autoGroupModal.html
@@ -18,12 +18,11 @@
           <button class="btn btn-default" data-dismiss="modal">
             Cancel
           </button>
-          <button class="btn btn-primary" data-dismiss="modal" type="submit">
+          <button id="createButton" class="btn btn-primary" data-dismiss="modal" type="submit">
             Create groups
           </button>
         </div>
       </form>
-
     </div>
   </div>
 </div>
