--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -50,7 +50,7 @@
           <h2 id="courseName">Course 1</h2>
 
           <div id="controls">
-            <button class="btn" id="addGroupBtn" data-toggle="modal" data-target="#newGroup" href="{% url 'new_group'%}">
+            <button class="btn" id="addGroupBtn" data-toggle="modal" data-target="#newGroupView" href="{% url 'new_group'%}">
               New Group
             </button>
             <button class="btn" id="autoGroupBtn" data-toggle="modal" data-target="#autoModal">
@@ -112,7 +112,6 @@
 
     {% include "./modals/autoGroupModal.html" %}
     {% include "./modals/settingsView.html" %}
-    {% include "./modals/newGroupView.html" %}
 
     <!-- Script for automatic grouping modal -->
     <script src="{% static 'js/autoGroupModal.js' %}"></script>
@@ -120,5 +119,13 @@
     <script src="{% static 'js/newGroupView.js' %}"></script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
     <script src="{% static 'js/editGroupModal.js'%}"></script>
+
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+    </script>
+    <script src="http://malsup.github.com/jquery.form.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
