--- a/project/templates/pages/studentView.html
+++ b/project/templates/pages/studentView.html
@@ -6,7 +6,7 @@
 <html lang="en">
 
   <head>
-    <title>Teacher view</title>
+    <title>Student view</title>
     <link rel="stylesheet" href="{% static 'css/teacherView.css' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicons/favicon.ico' %}"/>
     <!-- Get jQuery and bootstrap.js from CDN -->
@@ -15,7 +15,11 @@
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="{% static 'css/editGroup.css' %}">
   </head>
 
@@ -47,9 +51,6 @@
             <button class="btn" id="addGroupBtn">
               New Group
             </button>
-            <button class="btn" id="autoGroupBtn" data-toggle="modal" data-target="#autoModal">
-              Create Groups Automatically
-            </button>
             <button class="btn" id="groupSettingsBtn" data-toggle="modal" data-target="#groupSettings">
               Group Settings
             </button>
@@ -60,11 +61,10 @@
           <!-- Modal -->
           <div
             class="modal fade"
-            style=""
-            id="editGroupModal"
+            id="viewGroupModal"
             tabindex="-1"
             role="dialog"
-            aria-labelby="editGroupModal"
+            aria-labelby="viewGroupModal"
             aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
@@ -76,25 +76,25 @@
               <th id="groupName">Name</th>
               <th id="groupMembers">Members</th>
               <th id="groupType">Type</th>
-              <th id="editGroup"></th>
+              <th id="viewGroup"></th>
             </tr>
             {% for group in object_list %}
             <tr>
               <td>{{group.group_id}}</td>
               <td>
                 {% for student in group.students.all %}
-                {{student.username}}
+                  {{ student.username }}
                 {% endfor %}
               </td>
               <td>{{group.group_type}}</td>
               <td>
                 <button
-                  id="editGroupBtn"
+                  id="viewGroupBtn"
                   class="btn"
                   data-toggle="modal"
-                  data-target="#editGroupModal"
-                  href="{% url 'edit_group' group.id %}">
-                  Edit
+                  data-target="#viewGroupModal"
+                  href="{% url 'view_group' group.id %}">
+                  View
                 </button>
               </td>
             </tr>
@@ -107,18 +107,15 @@
 
     {% include "./modals/autoGroupModal.html" %}
     {% include "./modals/settingsView.html" %}
-    <!-- Logic for modal dialog -->
+    <!-- Script for automatic grouping modal -->
     <script src="{% static 'js/autoGroupModal.js' %}"></script>
-
-    <script src="http://malsup.github.com/jquery.form.js"></script>
-
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous">
+    <!-- Clears data passed into the viewGroupDialog when the modal is closed -->
+    <script>
+      $('body').on('hidden.bs.modal', '.modal', function() {
+        $(this).removeData('bs.modal');
+      });
     </script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="{% static 'js/editGroupModal.js'%}"></script>
   </body>
+
 </html>
