Refactor JS and HTML
Make arrow-functions standard and switch variables to constants where value isn't changed. For HTML remove redundant scripts and add line breaks where needed. Remove unused import from app/views.

--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -15,7 +15,11 @@
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="{% static 'css/editGroup.css' %}">
   </head>
 
@@ -60,7 +64,6 @@
           <!-- Modal -->
           <div
             class="modal fade"
-            style=""
             id="editGroupModal"
             tabindex="-1"
             role="dialog"
@@ -83,7 +86,7 @@
               <td>{{group.group_id}}</td>
               <td>
                 {% for student in group.students.all %}
-                {{student.username}}
+                  {{student.username}}
                 {% endfor %}
               </td>
               <td>{{group.group_type}}</td>
@@ -107,18 +110,10 @@
 
     {% include "./modals/autoGroupModal.html" %}
     {% include "./modals/settingsView.html" %}
-    <!-- Logic for modal dialog -->
+    <!-- Script for automatic grouping modal -->
     <script src="{% static 'js/autoGroupModal.js' %}"></script>
 
     <script src="http://malsup.github.com/jquery.form.js"></script>
-
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous">
-    </script>
-    <script src="http://malsup.github.com/jquery.form.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="{% static 'js/editGroupModal.js'%}"></script>
   </body>
 </html>
