--- a/project/templates/pages/modals/autoGroupModal.html
+++ b/project/templates/pages/modals/autoGroupModal.html
@@ -1,8 +1,11 @@
 <div class="modal fade" id="autoModal" role="dialog" aria-labelledby="autoGroupModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+
       <div class="modal-header">
-        <h3 class="modal-title" id="autoGroupModal">Create groups automatically</h3>
+        <h3 class="modal-title" id="autoGroupModal">
+          Create groups automatically
+        </h3>
       </div>
 
       <div class="modal-body">
@@ -26,9 +29,14 @@
       </div>
 
       <div class="modal-footer">
-        <button class="btn" data-dismiss="modal">Cancel</button>
-        <button class="btn" data-dismiss="modal" onclick="createGroups()">Create groups</button>
+        <button class="btn" data-dismiss="modal">
+          Cancel
+        </button>
+        <button class="btn" data-dismiss="modal" onclick="createGroups()">
+          Create groups
+        </button>
       </div>
+      
     </div>
   </div>
 </div>
