--- a/project/templates/pages/modals/editGroupDialog.html
+++ b/project/templates/pages/modals/editGroupDialog.html
@@ -61,23 +61,22 @@
     <input type="submit" class="btn btn-primary" name="submit" value="save">
   </div>
   <script>
-    var form_options = {
+    const form_options = {
         target: '#editGroupModal',
         success: function() {}
     }
     $('#editGroupForm').ajaxForm(form_options);
 
-    $(document).ready(function() {
+    $(document).ready(() => {
       $('#x').click(closeModal);
       $('#cancel').click(closeModal);
     });
 
-    function closeModal() {
-      setTimeout(function() { jQuery('#editGroupModal').modal('hide'); }, 1000);
-      $('body').on('hidden.bs.modal', '.modal', function () {
-          $(this).removeData('bs.modal');
-          window.location.reload(true);
-          console.log('Close success!');
+    closeModal = () => {
+      setTimeout(() => { jQuery('#editGroupModal').modal('hide'); }, 1000);
+      $('body').on('hidden.bs.modal', '.modal', function() {
+        $(this).removeData('bs.modal');
+        window.location.reload(true);
       });
     }
   </script>
