--- a/project/templates/pages/modals/editGroupDialogSuccess.html
+++ b/project/templates/pages/modals/editGroupDialogSuccess.html
@@ -1,22 +1,24 @@
 <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Success</h4>
-              </div>
-              <div class="modal-body">
-                  <p>Changes to group {{ group.group_id }} saved!</p>
-                  <script>
-                    //Closes modal and clears the modal data
-                    setTimeout(function() { jQuery('#editGroupModal').modal('hide'); }, 1000);
-                    $('body').on('hidden.bs.modal', '.modal', function () {
-                        $(this).removeData('bs.modal');
-                        window.location.reload(true);
-                        console.log('Save success!');
-                    });
-                  </script>
-              </div>
-              <div class="modal-footer">
-              </div>
-    </div><!-- /.modal-content -->
+  <div class="modal-content">
+
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+        ×
+      </button>
+      <h4 class="modal-title" id="myModalLabel">Success</h4>
+    </div>
+
+    <div class="modal-body">
+      <p>Changes to group {{ group.group_id }} saved!</p>
+      <script>
+        //Closes modal and clears the modal data
+        setTimeout(() => { jQuery('#editGroupModal').modal('hide'); }, 1000);
+        $('body').on('hidden.bs.modal', '.modal', function() {
+          $(this).removeData('bs.modal');
+          window.location.reload(true);
+        });
+      </script>
+    </div>
+
+  </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
