Add logout functionality and show user's first name

--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -28,10 +28,11 @@
       <h1 id="mainTitle">A+ Grouping Tool</h1>
       <div id="userIcon">
         <span class="glyphicon glyphicon-user"></span>
+        <p>{{ nimi }}</p>
       </div>
 
       <div id="logout">
-        <button class="btn">
+        <button class="btn" onclick="window.location.href = '/app/logout';">
           <span class="glyphicon glyphicon-log-out"></span>
           Logout
         </button>
