Fix show create new group dialog

--- a/project/templates/pages/teacherView.html
+++ b/project/templates/pages/teacherView.html
@@ -75,6 +75,19 @@
               <div class="modal-content">
               </div>
             </div>
+          </div>
+          <div
+            class="modal fade"
+            style=""
+            id="newGroupView"
+            tabindex="-1"
+            role="dialog"
+            aria-labelby="newGroupView"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+              </div>
+            </div>
           </div><!-- /.modal -->
           <table id="groups" class="table-striped">
             <tr>
