--- a/project/templates/pages/modals/newGroupView.html
+++ b/project/templates/pages/modals/newGroupView.html
@@ -1,48 +1,42 @@
 
 <form id="newGroupForm" class="form" role="form" action="{% url 'new_group'%}" method="post">
-  <div class="modal fade" id="newGroup" role="dialog">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h3>Create group</h3>
-        </div>
-        <div class="modal-body">
-          <div id="headerOne" class="container-fluid">
-            <h4>Students without a group</h4>
-          </div>
-          <div id="headerTwo" class="container-fluid">
-            <h4>Chosen students</h4>
-          </div>
-          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-            integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
-            crossorigin="anonymous">
-          <div class="container-fluid" id="mainContainer">
-            <div id="containerOne" class="container-fluid">
-              <ul id="list1" class="list-group">
-                {% for student in studentsWithoutGroup %}
-                  <li class="list-group-item"> {{student.username}} </li>
-                {% endfor %}
-              </ul>
+  <div class="modal-header">
+    <h3>Create group</h3>
+  </div>
+  <div class="modal-body">
+    <div id="headerOne" class="container-fluid">
+      <h4>Students without a group</h4>
+    </div>
+    <div id="headerTwo" class="container-fluid">
+      <h4>Chosen students</h4>
+    </div>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
+      integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+      crossorigin="anonymous">
+    <div class="container-fluid" id="mainContainer">
+      <div id="containerOne" class="container-fluid">
+        <ul id="list1" class="list-group">
+          {% for student in object_list %}
+            <li class="list-group-item"> {{student.username}} </li>
+          {% endfor %}
+        </ul>
 
-            </div>
-            <div class="container-fluid" id="buttonContainer">
-              <button id="addButton" class="btn btn-md btn-block">Add</button>
-              <button id="removeButton" class ="btn btm-md btn-block">Remove</button>
-            </div>
-            <div id="containerTwo" class="container-fluid">
-              <ul class="list-group" id="list2">
-                <li class="list-group-item">testi</li>
-                <li class="list-group-item">testi2</li>
-                <li class="list-group-item">testi3</li>
-              </ul>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button class="btn" data-dismiss="modal">Cancel</button>
-            <button class="btn" data-dismiss="modal">Save</button>
-          </div>
-        </div>
       </div>
+      <div class="container-fluid" id="buttonContainer">
+        <button id="addButton" class="btn btn-md btn-block">Add</button>
+        <button id="removeButton" class ="btn btm-md btn-block">Remove</button>
+      </div>
+      <div id="containerTwo" class="container-fluid">
+        <ul class="list-group" id="list2">
+          <li class="list-group-item">testi</li>
+          <li class="list-group-item">testi2</li>
+          <li class="list-group-item">testi3</li>
+        </ul>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal">Cancel</button>
+      <button class="btn" data-dismiss="modal">Save</button>
     </div>
   </div>
   <script>
