--- a/project/templates/pages/modals/autoGroupModal.html
+++ b/project/templates/pages/modals/autoGroupModal.html
@@ -8,7 +8,7 @@
         </h3>
       </div>
 
-      <form id="create-group" class="form" role="form" action="{% url 'group' course.course_id  %}" method="post">
+      <form id="create-group" class="form" role="form" action="{% url 'group_students' %}" method="post">
         <div class="modal-body">
           <h4>Group size:</h4>
           <input id="autoGroupSize" name="autoGroupSize" type="number" value="1" min="1"/>
